2005-04-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/updateiconcache.c (is_cache_up_to_date): Return 
	TRUE if the cache is newer than the directory.  (#172852,
	Jacob Kroon)

	* configure.in: Replace an explicit pkg-config by 
	$PKG_CONFIG.  (#168074, Hans-Wolfgang Loidl)

	* gdk/gdkpango.c (gdk_pango_layout_line_get_clip_region): 
	Ignore regions which fall completely outside the line.  
	(#165862, Felipe Heidrich)
	
2005-04-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/*.c, gdk/gdkdisplaymanager.c: s/G-OBJECT/G_OBJECT/g, 
	and some more build fixes.

2005-04-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_enable_model_drag_source) 
	(gtk_tree_view_enable_model_drag_dest): Pass the target list 
	to the underlying dnd implementation, otherwise we miss the 
	target info in the drag-data-received signal.  (#164085, Jorn
	Baayen)

	* gtk/*.c, gdk/gdkdisplaymanager.c: Use canonical property
	names for g_object_notify() calls.  (#171746, Morten Welinder)
	  
2005-04-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_set_search_column): Allow
	resetting search-column to -1, and document it.  (#172891,
	Lorenzo Gil Sanchez)

2005-04-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_motion_resize_column) 
	(gtk_tree_view_bin_expose): Avoid a few unnecessary calls
	to gdk_window_get_pointer(). (#168015, Billy Biggs)

	* gtk/gtkwindow.c (gtk_window_set_keep_below): Fix the EWMH link,
	noticed by Kristof Vansant.

	* po/.cvsignore, po-properties/.cvsignore: Remove
	Makefile.in.in.  (#171092, Stefan Kasal)

2005-04-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkrc.c (gtk_rc_parse_style): Don't modify scanner->value,
	copy it first.  (#165693, Tommi Komulainen)

2005-04-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcomboboxentry.c (gtk_combo_box_entry_grab_focus): 
	* gtk/gtkcombobox.c (gtk_combo_box_grab_focus): Implement